<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2</string>
    <!-- main_activity.xml -->
    <string name="activitya">Activity A</string>
    <string name="start_activityB">Start Activity B</string>
    <string name="dialog">Dialog</string>
    <string name="thread_counter">Thread Counter : %1$s</string>
    <string name="close_app">Close App</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="close">Close</string>
    <string name="confirm_exit">Are you sure you want to close application?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>

    <!-- activity_b.xml -->
    <string name="activityb">Activity B</string>
    <string name="activityb_message">Activity B occupies the complete window real-estate. The Android OS forces Activity A to be paused.However,the background thread keep incrementing the counter...</string>
    <string name="finishb">Finish B</string>

</resources>