<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:padding="10dp"
    tools:context="com.android.assignment2.ActivityA"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:id="@+id/activity_b_relTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/activity_b_imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/founding" />

        <TextView
            android:id="@+id/activity_b_txtTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/activity_b_imgLogo"
            android:text="@string/activityb"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_b_txtMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_b_relTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/activityb_message"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/activity_b_btnClose"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/activity_b_txtMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="onClickFinishB"
        android:background="@android:color/black"
        android:text="@string/finishb"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>